JEDIT 2.5 VERSION HISTORY

* Version 2.5pre2

+ New Features

- New macro language feature: writing $x where x is a register in an
  action command will substitute contents of register x. \$ can be used
  to insert a literal '$'
- You can now disable file tokenization on load in Utilities->Global Options.
  This results in faster file loading, but slightly less accurate syntax
  highlighting

+ Enhancements

- jEdit download is now about 500K smaller thanks to an improved installer
- User input is blocked while I/O is in progress
- Improved focus handling when splitting views
- The 'Macros' menu now substitutes spaces for underscores in macro names

+ Bug Fixes

- Fixed possible EmptyStackException in View.popStatus() (since 2.5pre1)
- Possible fix for IBM JDK 1.3 for Linux NPE in
  EnhancedCheckBoxMenuItem.Model.isSelected()
- HyperSearch didn't work with the directory list set properly (since 2.5pre1)
- Fixed minor buffer list sorting bug
- Fixed obscure buffer switching bug

* Version 2.5pre1

+ New Features

- New I/O system.
  - Multithreaded - this should improve perceived performance, and you
    can abort lengthy I/O operations
  - Supports pluggable 'virtual filesystems' which can support transparent
    loading and saving of non-local files
  - The 'File', 'Url' and 'Ftp' VFS's are included with the core. More can
    be added as plugins
  - The code is still a bit rough. User input isn't blocked while saving or
    loading, and there is no way to abort a request. This will be be fixed in
    future releases.
- Undo queue size can be set
- You can now prompt the user for input in macros; try invoking
  'Macros->Prompt User for Input' while recording
- Background mode; if jEdit is started with the -background switch, it will
  not create an initial view and instead wait for client connections. Also,
  closing all views in background mode will not exit jEdit; to exit a
  backgrounded instance, invoke 'File->Exit'.

+ Enhancements
