@@ -37,7 +37,7 @@ save.shortcut=C+s
 set-caret-register.shortcut=C+t
 select-caret-register.shortcut=C+u
 paste.shortcut=C+v
-close-file.shortcut=C+w
+close-buffer.shortcut=C+w
 cut.shortcut=C+x
 goto-register.shortcut=C+y
 undo.shortcut=C+z
